--- a/style.css
+++ b/style.css
@@ -1,5 +1,103 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: rgb(226, 226, 226);
+    background:url('/img/tlo.jpg');
+    background-size: cover;
+}
+main{
+    position: relative;
+    padding-bottom: 60px;
+}
+i{
+    width: 29px;
+    height: 25px;
+    color: #afafaf;
+}
+form{
+    background-color: #f4f4f4;
+    padding: 20px;
+    /* border-radius: 5px; */
+    -webkit-box-shadow: 0px 0px 0px 20px rgba(0,0,0,0.3);
+    -moz-box-shadow: 0px 0px 0px 20px rgba(0,0,0,0.3);
+    box-shadow: 0px 0px 0px 20px rgba(0,0,0,0.3)
+}
+.head{
+    position: absolute;
+    left: 327px;
+    top:118px;
+}
+h3{
+    text-align: center;
+    color: white;
+    margin-bottom: 25px;
+    font-size: 24px;
+}
+.lizard{
+    width: 118px;
+    margin: 0;
+    margin-right: 20px;
+    padding: 0;
+}
+article{
+  width: 380px;
+    
+}
+.input-div{
+    height: 48px;
+    border: 1px solid grey;
+    background-color: #f4f4f4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+.input-txt{
+    background-color: #f8f8f8;
+    border: none;
+    height: 25px;
+    width: 270px;
+    border-left: 1px solid rgba(0,0,0,0.5);
+    padding-left: 20px;
+    color: #afafaf;
+}
+textarea{
+    box-sizing: border-box;
+    height: 230px;
+    width: 340px;
+    border-radius: 5px;
+    padding-top: 15px;
+    padding-left: 18px;
+    background-color:#f8f8f8;
+}
+.register-form{
+    position: absolute;
+    left: 66px;
+    top: 191px;
+}
+.sign-in{
+    position: absolute;
+    left: 565px;
+    top:191px;
+}
+.recorver-form{
+    position: absolute;
+    left: 564px;
+    top:530px;
+}
+.subscribe-form{
+    position: absolute;
+    left:565px;
+    top:875px
+}
+.send-email{
+    position: absolute;
+    left:67px;
+    top:739px;
+}
+.foto{
+    position: absolute;
+    left:600px;
+    top:1161px;
+    margin-bottom: 80px;
 }
