--- a/style.css
+++ b/style.css
@@ -3,11 +3,13 @@ body{
     padding: 0;
     background:url('/img/tlo.jpg');
     background-size: cover;
+    font-family: Arial, Helvetica, sans-serif;
 }
 main{
     position: relative;
     padding-bottom: 60px;
 }
+
 i{
     width: 29px;
     height: 25px;
@@ -19,31 +21,42 @@ form{
     /* border-radius: 5px; */
     -webkit-box-shadow: 0px 0px 0px 20px rgba(0,0,0,0.3);
     -moz-box-shadow: 0px 0px 0px 20px rgba(0,0,0,0.3);
-    box-shadow: 0px 0px 0px 20px rgba(0,0,0,0.3)
+    box-shadow: 0px 0px 0px 20px rgba(0,0,0,0.3);
+    margin-top: 45px;
 }
-.head{
-    position: absolute;
-    left: 327px;
-    top:118px;
-}
+
 h3{
     text-align: center;
     color: white;
-    margin-bottom: 25px;
-    font-size: 24px;
+    font-size: 25px;
+    letter-spacing: 1px;
 }
 .lizard{
+    position: absolute;
+    top:55px;
+    left:350px;
     width: 118px;
-    margin: 0;
-    margin-right: 20px;
-    padding: 0;
+}
+.logo{
+    position: absolute;
+    height: 75px;
+    width: 300px;
+    top:90px;
+    left:488px;
+}
+.link{
+    position: absolute;
+    left:488px;
+    top:155px;
+    width: 85px;
+    height: 7px;
 }
 article{
   width: 380px;
     
 }
 .input-div{
-    height: 48px;
+    height: 40px;
     border: 1px solid grey;
     background-color: #f4f4f4;
     display: flex;
@@ -53,13 +66,18 @@ article{
     margin-bottom: 20px;
 }
 .input-txt{
+    box-sizing: border-box;
     background-color: #f8f8f8;
     border: none;
-    height: 25px;
+    height: 30px;
     width: 270px;
     border-left: 1px solid rgba(0,0,0,0.5);
     padding-left: 20px;
     color: #afafaf;
+    font-size: 18px;
+}
+#location{
+    width: 290px;
 }
 textarea{
     box-sizing: border-box;
@@ -93,11 +111,78 @@ textarea{
 .send-email{
     position: absolute;
     left:67px;
-    top:739px;
+    top:800px;
 }
 .foto{
     position: absolute;
     left:600px;
     top:1161px;
     margin-bottom: 80px;
+}
+.check-div{
+    margin-bottom: 15px;
+}
+
+.btn-submit{
+    background-color: #93d02b;
+    color: white;
+    font-size: 18px;
+    border-radius: 5px;
+    letter-spacing: 1px;
+    border: 1px solid #74a322;
+    text-shadow: 2px 2px 2px #000000;
+}
+
+.btn-sign-up{
+    width: 340px;
+    height: 45px;
+    
+}
+label{
+    line-height: 25px;
+    color: #afafaf;
+}
+
+#confirm-things,
+#send-copy{
+    display: none;
+}
+input[type = checkbox] + label{
+    position: relative;
+    padding-left:35px;
+    cursor: pointer;
+    display: flex;
+    flex-flow: row wrap;
+    /* justify-content: center; */
+}
+input[type=checkbox] + label:before{
+    position: absolute;
+    content: "";
+    display: block; /* koniecznie element blokowy, aby móc nadać odpowiednie wymiary */
+    width: 15px;
+    height: 15px;
+    top: 0; /* ustalamy pozycje */
+    left: 0;
+     /* dodamy jeszcze odpowiedni kursor */
+    transition: all .4s ease;
+    -webkit-transition: all .7s ease;
+    background-color: white;
+    border: 2px solid grey;
+    border-radius: 3px;
+    padding: 4px;
+}
+input[type=checkbox]:checked + label:before{
+    background-color: #97d230;
+  
+}
+input[type=checkbox]:disabled + label:before{
+    background-color: #b6b6b6;
+    border-color: #b6b6b6;
+}
+input[type=checkbox]:checked:disabled + label:before{
+    background-color: #cccccc;
+    border-color: #b6b6b6;
+}
+.check-div-sign{
+    width:40%;
 }
