--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ form{
 
 h3{
     text-align: center;
-    color: white;
+    color: #ffffff;
     font-size: 25px;
     letter-spacing: 1px;
 }
@@ -57,7 +57,7 @@ article{
 }
 .input-div{
     height: 40px;
-    border: 1px solid grey;
+    border: 1px solid #808080;
     background-color: #f4f4f4;
     display: flex;
     justify-content: center;
@@ -65,6 +65,7 @@ article{
     margin-bottom: 20px;
     border-radius: 3px;
 }
+
 .input-txt{
     box-sizing: border-box;
     background-color: #f8f8f8;
@@ -73,12 +74,16 @@ article{
     width: 270px;
     border-left: 1px solid rgba(0,0,0,0.5);
     padding-left: 20px;
-    color: #afafaf;
     font-size: 18px;
 }
-#location{
-    width: 290px;
+.input-txt::placeholder{
+    color: #afafaf;
 }
+#location{
+    width: 270px;
+    color: #afafaf;
+}
+
 textarea{
     box-sizing: border-box;
     height: 230px;
@@ -137,9 +142,7 @@ textarea{
 }
 
 .btn-sign-up{
-    width: 340px;
-    
-    
+    width: 340px;   
 }
 label{
     line-height: 25px;
@@ -216,4 +219,18 @@ input[type=checkbox]:checked:disabled + label:before{
 .btn-no{
     width: 45%;
     background-color: #f4495b;
+}
+.lizard-bottom{
+     width: 80px;
+}
+.logo-bottom{
+    width: 240px;
+    height: 65px;
+}
+.link-bottom{
+    position: absolute;
+    width: 280px;
+    height: 25px;
+    top:110px;
+    right: -10px;
 }
