--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 body{
     margin: 0;
     padding: 0;
-    background:url('/img/tlo.jpg');
-    background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
+    height: 100%;
+
 }
 main{
     position: relative;
     padding-bottom: 60px;
+    background:url('/img/tlo.jpg');
+    background-size: cover;
+    min-height: 1400px;
 }
 
 i{
@@ -30,6 +33,8 @@ h3{
     color: #ffffff;
     font-size: 25px;
     letter-spacing: 1px;
+    text-shadow: 2px 2px 2px #000000;
+    font-weight: 100;
 }
 .lizard{
     position: absolute;
@@ -154,31 +159,33 @@ label{
 #sign-check{
     display: none;
 }
+.white-border{
+
+}
 input[type = checkbox] + label{
     position: relative;
     padding-left:35px;
     cursor: pointer;
     display: flex;
     flex-flow: row wrap;
-    /* justify-content: center; */
 }
 input[type=checkbox] + label:before{
     position: absolute;
     content: "";
-    display: block; /* koniecznie element blokowy, aby móc nadać odpowiednie wymiary */
+    display: block; /* element blokowy, aby móc nadać odpowiednie wymiary */
     width: 15px;
     height: 15px;
-    top: 0; /* ustalamy pozycje */
+    top: 0; 
     left: 0;
-     /* dodamy jeszcze odpowiedni kursor */
     transition: all .4s ease;
     -webkit-transition: all .7s ease;
-    background-color: white;
-    border: 2px solid grey;
+    background-color: #ffffff;
+    border: 2px solid #808080;
     border-radius: 3px;
     padding: 4px;
 }
 input[type=checkbox]:checked + label:before{
+    border-radius: 8px;
     background-color: #97d230;
   
 }
@@ -219,6 +226,7 @@ input[type=checkbox]:checked:disabled + label:before{
 .btn-no{
     width: 45%;
     background-color: #f4495b;
+    border-color: #f52338;
 }
 .lizard-bottom{
      width: 80px;
