--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@ body {
     background: url('/img/tlo.jpg');
     background-size: cover;
 }
-
+button:disabled{
+    cursor: not-allowed;
+}
 /* GRID */
 main {
     display: grid;
@@ -39,8 +41,8 @@ main {
 .lizard {
     grid-area: lizard;
     width: 118px;
-    
 }
+
 
 .logo {
     grid-area: logo;
@@ -93,7 +95,6 @@ i {
 form {
     background-color: #f4f4f4;
     padding: 20px;
-    /* border-radius: 5px; */
     -webkit-box-shadow: 0px 0px 0px 20px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 0px 0px 0px 20px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 0px 0px 20px rgba(0, 0, 0, 0.3);
@@ -194,7 +195,6 @@ input[type=checkbox]+label:before {
     position: absolute;
     content: "";
     display: block;
-    /* element blokowy, aby móc nadać odpowiednie wymiary */
     width: 10px;
     height: 10px;
     top: 0;
@@ -258,8 +258,7 @@ input[type=checkbox]:checked:disabled+label:before {
 
 .rec-done {
     width: 45%;
-    background-color: #bcdb97;
-    cursor: not-allowed;
+    background-color: #bcdb97;    
 }
 
 .btn-no {
